@@ -519,3 +519,19 @@ vanilla give up (`VarkaCodegenGiveUpSuite`) proves the cliff; the claim the proj
 what Varka does at that cliff, which is a second assertion on the same query: the Varka node
 present in the plan, or a decline with the recorded reason. A reproducer with only the vanilla
 arm pins the half of the claim nobody disputes.
+
+## A reproducer past 64KB is sized near the smallest count that crosses it
+
+Janino's heap grows much faster than the method it compiles. `VarkaCodegenGiveUpSuite`'s G32
+compiles one projection method past 64KB so that the factory falls back to the interpreter, and
+its live heap after collection was measured at 363MB for 600 entries (still under 64KB), 473MB
+for 1000, 853MB for 1500 and about 3GB for 3000. Alone, 3000 entries pass. In CI's
+`sql - other tests` job every sql suite shares one 4GB test JVM, and a pull request that touches
+the build workflow runs that job; there G32 at 3000 ran the heap out, aborted the suite and hung
+the job until its timeout. The Varka suites job runs the suite in a JVM of its own, which is why
+the pull request that added the test passed.
+
+So a test that has to cross a code-size limit uses a count near the smallest one that crosses
+it, checked with `-Xlog:gc:file=<path>` on `Test/javaOptions` and a `-z` run of the one test.
+The other reproducers in that suite peak between 112MB and 638MB each, and the suite as a whole
+at 731MB.
